--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
     <div id="top"><a href="">Resources</a></div>
     <div id="top"><a href="">Pricing</a></div>
     <div>
-    <button id="login"><a href="login.html" target="_main" id="login">Login</a></button>
+    <button id="login"><a href="logincopy.html" target="_main" id="login">Login</a></button>
     <button style="height: 25px; font-weight: bold; background-color: rgb(224, 224, 33); color: #022D41; border: none;border-radius: 10px; width: 90px;">Sign up</button>
 </div>
 
